source/externs/X11/X.h

#define YSorted			1
#define YXSorted		2
#define YXBanded		3